--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Daaves GitHub Site</h1>
+<p>Lyrics: Dududududu. To be finsihed! </p>
+
+<audio autoplay loop>
+	Your browser is too SHITE to support the <code>AUDIO</code> element.
+	<source src="tunes.mp3" >
+</audio>
 </body>
 </html>
