Added Custom js, css, the background and the bootstrap dependencies.

--- a/index.html
+++ b/index.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://use.fontawesome.com/ecec061fb5.js"></script>
 <meta property="og:image" content="http://orig15.deviantart.net/c31e/f/2010/365/1/f/inspector_luigi_pic_by_coconutstevio92-d364uwp.jpg">
 <meta property="og:description" content="Luigi Gadget ;>)" />
 <meta charset="utf-8">
-
+<link href="css/main.css" rel="stylesheet" type="text/css" />
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 </head>
-<body>
+<body background="LUIGIIII.jpg">
+<div class="Header">
+
+
 <div class="Title">
   <h1 align="center"><strong>Henlo  :&gt;)</strong></h1> 
+</div></div>
+
+<div class="main">
+ Many Tings are here:
+<div class="Ruski">
+Hehe, you clicked here. Dont you feel stupid reading this? I missed out the e in reading, you just looked back and realised your a retard :D
 </div>
-
-
 <div class="Audio">
-<h3>Lyrics: Dududududu. To be finsihed! </h3>
-<audio autoplay loop> 
+<h3>Song: Inspector Gadget Luigi's Mansion by <a href="http://foxwells-garden.pw">Brie</a></h3>
+<h3>Lyrics: Dududududu. To be finished! </h3>
+<audio> 
 	Your browser is too SHITE to support the <code>AUDIO</code> element.
 	<source src="tunes.mp3" >
 </audio>
+<p>&nbsp;</p>
 </div>
 <script src="js/jquery-1.11.3.min.js"></script>
 <script src="js/bootstrap.js"></script>
+<script src="js/custom.js"></script>
 </body>
 </html>
