--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <meta property="og:image" content="http://orig15.deviantart.net/c31e/f/2010/365/1/f/inspector_luigi_pic_by_coconutstevio92-d364uwp.jpg">
 <meta property="og:description" content="Luigi Gadget ;>)" />
 <meta charset="utf-8">
+<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Work+Sans" rel="stylesheet">
 <link href="css/main.css" rel="stylesheet" type="text/css" />
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 </head>
 <body background="LUIGIIII.jpg">
 <div class="Header">
-
 
 <div class="Title">
   <h1 align="center"><strong>Henlo  :&gt;)</strong></h1> 
@@ -21,12 +21,20 @@
 <div class="main">
  Many Tings are here:
 <div class="Ruski">
-Hehe, you clicked here. Dont you feel stupid reading this? I missed out the e in reading, you just looked back and realised your a retard :D
+  <p> Hehe, you clicked here. Dont you feel stupid reading this? I missed out the e in reading, you just looked back and realised your a retard :D </p>
+  <p>&nbsp;</p>
 </div>
+<h3>Discord: <a>https://discord.gg/Ww3XS3A</a></h3>
+<h3>------------------------------------------------------------</h3>
+<h2>Projects:</h2>
+<h3>MilitaryRP Gamemode <a href="https://trello.com/b/Zhl9LliE/military-rp-development">Trello</a></h3>
+<h3>------------------------------------------------------------</h3>
+<h2> This Site:</h2>
 <div class="Audio">
-<h3>Song: Inspector Gadget Luigi's Mansion by <a href="http://foxwells-garden.pw">Brie</a></h3>
+<h3>Song: Inspector Gadget Luigi's Mansion by <a href="https://foxwells-garden.pw">Brie</a></h3>
 <h3>Lyrics: Dududududu. To be finished! </h3>
-<audio> 
+
+<audio autoplay loop> 
 	Your browser is too SHITE to support the <code>AUDIO</code> element.
 	<source src="tunes.mp3" >
 </audio>
