Added a "secret" login, edited css and made some error pages and a .htaccess

--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
 <h2>Projects:</h2>
 <h3>MilitaryRP Gamemode <a href="https://trello.com/b/Zhl9LliE/military-rp-development">Trello</a></h3>
 <h3>------------------------------------------------------------</h3>
+<div class="Mentions">
+	<h2>Honourable Mentions of the real OG's</h2>
+</div>
+<h3>------------------------------------------------------------</h3>
 <h2> This Site:</h2>
+
 <div class="Audio">
 <h3>Song: Inspector Gadget Luigi's Mansion by <a href="https://foxwells-garden.pw">Brie</a></h3>
 <h3>Lyrics: Dududududu. To be finished! </h3>
