--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body background="LUIGIIII.jpg">
 <div class="Header">
 
-<div class="Title">
+<a href="https://yomanz.github.io/PrismWebsite/>"<div class="Title">
   <h1 align="center"><strong>Henlo  :&gt;)</strong></h1> 
-</div></div>
+	</div></div></a>
 
 <div class="main">
  Many Tings are here:
